# RaftKeeper

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .yamllint  CMakeLists.txt  LICENSE  PreLoad.cmake  README.md  build.sh  gitsubmodule.sh  version.txt
base/common/: CMakeLists.txt  DateLUT.cpp  DateLUT.h  DateLUTImpl.cpp  DateLUTImpl.h  DayNum.h  ErrorHandlers.h  JSON.cpp  JSON.h  LineReader.cpp  LineReader.h  LocalDate.h  LocalDateTime.h  ReadlineLineReader.cpp  ReadlineLineReader.h  SimpleCache.h  StringRef.cpp  StringRef.h  argsToConfig.cpp  argsToConfig.h  arithmeticOverflow.h  constexpr_helpers.h  coverage.cpp  coverage.h  defines.h  demangle.cpp  demangle.h  errnoToString.cpp  errnoToString.h  extended_types.h  find_symbols.h  getFQDNOrHostName.cpp  getFQDNOrHostName.h  getMemoryAmount.cpp  getMemoryAmount.h  getPageSize.cpp  getPageSize.h  getResource.cpp  getResource.h  getThreadId.cpp  (+28 more)
base/daemon/: BaseDaemon.cpp  BaseDaemon.h  CMakeLists.txt
base/glibc-compatibility/: CMakeLists.txt  glibc-compatibility.c
contrib/: CMakeLists.txt  CopyRight  NOTICE
contrib/FastMemcpy/: CMakeLists.txt
contrib/boost-cmake/: CMakeLists.txt
contrib/boringssl-cmake/: CMakeLists.txt
contrib/cctz-cmake/: CMakeLists.txt
contrib/concurrentqueue-cmake/: CMakeLists.txt
contrib/double-conversion-cmake/: CMakeLists.txt
contrib/dragonbox-cmake/: CMakeLists.txt
contrib/fmtlib-cmake/: CMakeLists.txt
contrib/jemalloc-cmake/: CMakeLists.txt
contrib/libcxx-cmake/: CMakeLists.txt
contrib/libcxxabi-cmake/: CMakeLists.txt
contrib/libunwind-cmake/: CMakeLists.txt
contrib/libxml2-cmake/: CMakeLists.txt
contrib/nuraft-cmake/: CMakeLists.txt
contrib/poco-cmake/: CMakeLists.txt
contrib/protobuf-cmake/: CMakeLists.txt
contrib/re2_st/: CMakeLists.txt
programs/: CMakeLists.txt  config_tools.h.in  main.cpp  ya.make
programs/converter/: CMakeLists.txt  RaftKeeperConverter.cpp  raftkeeper-converter.cpp
programs/keeper-bench/: CMakeLists.txt  Runner.cpp  Runner.h  raftkeeper-bench.cpp
programs/server/: CMakeLists.txt  IServer.h  Server.cpp  Server.h  config.xml  raftkeeper-server.cpp
programs/service/: CMakeLists.txt  IServer.h  Service.cpp  Service.h  ServiceTCPHandler.cpp  ServiceTCPHandler.h  ServiceTCPHandlerFactory.cpp  clickhouse-service.cpp  config.xml
programs/service-converter/: CMakeLists.txt  ServiceConverter.cpp
src/: CMakeLists.txt  ya.make
src/Common/: ActionBlocker.h  ActionLock.cpp  ActionLock.h  AlignedBuffer.cpp  AlignedBuffer.h  Allocator.cpp  Allocator.h  Allocator_fwd.h  Arena.h  ArenaAllocator.h  ArenaWithFreeLists.h  ArrayCache.h  AutoArray.h  BitHelpers.h  COW.h  ClickHouseRevision.cpp  ClickHouseRevision.h  ColumnsHashing.h  ColumnsHashingImpl.h  CombinedCardinalityEstimator.h  CompactArray.h  CompactStrings.cpp  CompactStrings.h  ConcurrentBoundedQueue.h  CounterInFile.h  CpuId.h  CurrentMemoryTracker.cpp  CurrentMemoryTracker.h  CurrentMetrics.cpp  CurrentMetrics.h  CurrentThread.cpp  CurrentThread.h  DNSResolver.cpp  DNSResolver.h  Dwarf.cpp  Dwarf.h  Elf.cpp  Elf.h  Epoll.cpp  Epoll.h  (+186 more)
src/Coordination/: NuKeeperStorageDispatcher.h
src/Core/: Context.cpp  Context.h  DecimalFunctions.h  Defines.h  Field.cpp  Field.h  MultiEnum.h  Protocol.h  Types.h  UUID.h  config_core.h.in
src/IO/: AIO.cpp  AIO.h  AIOContextPool.cpp  AIOContextPool.h  BitHelpers.h  BufferBase.h  BufferWithOwnMemory.h  ConcatReadBuffer.h  ConnectionTimeouts.h  ConnectionTimeoutsContext.h  DoubleConverter.cpp  DoubleConverter.h  EmptyReadBuffer.h  HTTPChunkedReadBuffer.cpp  HTTPChunkedReadBuffer.h  HashingReadBuffer.h  HashingWriteBuffer.cpp  HashingWriteBuffer.h  IReadableWriteBuffer.h  LimitReadBuffer.cpp  LimitReadBuffer.h  MMapReadBufferFromFile.cpp  MMapReadBufferFromFile.h  MMapReadBufferFromFileDescriptor.cpp  MMapReadBufferFromFileDescriptor.h  MemoryReadWriteBuffer.cpp  MemoryReadWriteBuffer.h  NullWriteBuffer.cpp  NullWriteBuffer.h  Operators.h  PeekableReadBuffer.cpp  PeekableReadBuffer.h  ReadBuffer.h  ReadBufferAIO.cpp  ReadBufferAIO.h  ReadBufferFromFile.cpp  ReadBufferFromFile.h  ReadBufferFromFileBase.cpp  ReadBufferFromFileBase.h  ReadBufferFromFileDescriptor.cpp  (+46 more)
src/Interpreters/: Context.cpp  Context.h
src/NIO/: NotificationCenter.cpp  NotificationCenter.h  Observer.h  PollSet.cpp  SocketAcceptor.h  SocketNotification.h  SocketNotifier.cpp  SocketNotifier.h  SocketReactor.cpp  SocketReactor.h
src/Network/: Notification.h  NotificationCenter.cpp  NotificationCenter.h  Observer.h  PollSet.cpp  README.md  SocketAcceptor.h  SocketNotification.h  SocketNotifier.cpp  SocketNotifier.h  SocketReactor.cpp  SocketReactor.h
src/Server/: HTTPHandlerFactory.cpp  HTTPHandlerFactory.h  NuKeeperTCPHandler.cpp
src/Service/: ACLMap.cpp  ACLMap.h  AvgMinMaxCounter.cpp  AvgMinMaxCounter.h  CMakeLists.txt  ConnCommon.h  ConnectionHandler.cpp  ConnectionHandler.h  ConnectionStats.cpp  ConnectionStats.h  Context.cpp  Context.h  Crc32.cpp  Crc32.h  Defines.h  FollowerRequestProcessor.cpp  FollowerRequestProcessor.h  ForwardConnection.cpp  ForwardConnection.h  ForwardConnectionHandler.cpp  ForwardConnectionHandler.h  ForwardRequest.cpp  ForwardRequest.h  ForwardResponse.cpp  ForwardResponse.h  ForwardingClient.cpp  ForwardingClient.h  ForwardingConnection.cpp  ForwardingConnection.h  ForwardingConnectionHandler.cpp  ForwardingConnectionHandler.h  FourLetterCommand.cpp  FourLetterCommand.h  Keeper4LWInfo.h  KeeperCommon.cpp  KeeperCommon.h  KeeperConnectionStats.cpp  KeeperConnectionStats.h  KeeperDispatcher.cpp  KeeperDispatcher.h  (+108 more)
src/ZooKeeper/: CMakeLists.txt  IKeeper.cpp  IKeeper.h  README.md  TestKeeper.cpp  TestKeeper.h  Types.h  ZooKeeper.cpp  ZooKeeper.h  ZooKeeperCommon.cpp  ZooKeeperCommon.h  ZooKeeperConstants.cpp  ZooKeeperConstants.h  ZooKeeperIO.cpp  ZooKeeperIO.h  ZooKeeperImpl.cpp  ZooKeeperImpl.h
tests/: CMakeLists.txt  clickhouse-test  clickhouse-test-server  msan_suppressions.txt  tsan_suppressions.txt  ubsan_suppressions.txt
tests/ci/: code_style_check.py  process_style_check_result.py
tests/config/: config.xml
(+685 files in other folders)
